--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -11,6 +11,14 @@
     background: lightgreen;
 }
 
+.clickable-table .red-bg {
+    background: lightcoral;
+}
+
+.clickable-table .orange-bg {
+    background: lightsalmon;
+}
+
 .clickable-table .green-bg-fg {
     background: lightgreen;
     color: lightgreen;
@@ -21,8 +29,5 @@
     color: white;
 }
 
-.clickable-table .red-bg {
-    background: lightcoral;
-}
 
 
