--- a/app/presentation/template/index.html
+++ b/app/presentation/template/index.html
@@ -11,15 +11,14 @@
 
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-lg">
-            <table class="sonoff-table clickable-table"></table>
+<div class="tables">
+        <div>
+            <table class="table-container sonoff-table clickable-table"></table>
         </div>
-        <div class="col-lg">
-            <table class="scheme-table clickable-table"></table>
+<br>
+        <div>
+            <table class="table-container scheme-table clickable-table"></table>
         </div>
-    </div>
 </div>
 
 
