--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -30,4 +30,92 @@
 }
 
 
+@media screen and (min-width: 1000px) {
+  .table-container {
+    float: left;
+    width: 15%;
+  }
+  .table-container:first-of-type {
+    width: 40%;
+  }
+}
 
+.table_container {
+  float: left;
+  width: 25%;
+}
+
+.container::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+table {
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+tr {
+  padding: 15px;
+  text-align: center;
+}
+
+td {
+  color: black;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px double white;
+  height: 50px;
+  background-color: #d5d0d0;
+  width: 272px;
+    font-size: x-large;
+    font-weight: bolder;
+}
+
+.sub_text {
+  font-size: 12px;
+  font-style: italic;
+  color: #0071ce;
+  font-weight: 100;
+}
+
+th {
+  background-color: black;
+  text-align: center;
+  padding: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  color: white;
+  font-weight: bold;
+  height: 70px;
+}
+
+.header {
+  color: #0071ce;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.wrapper {
+  text-align: center;
+  margin-top: 20px;
+}
+
+table tr:last-child td:first-child {
+  border-bottom-left-radius: 10px;
+}
+
+table tr:last-child td:last-child {
+  border-bottom-right-radius: 10px
+  }
+
+@media screen and (max-width: 600px) {
+  .tables {
+    display: flex;
+    flex-direction: column;
+  }
+  .table_container {
+    width: 100%;
+  }
+}
