--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,9 +1,9 @@
 .clickable-table, .clickable-table td, .clickable-table th {
-   border: 1px solid black;
-  border-collapse: collapse;
+    border: 1px solid black;
+    border-collapse: collapse;
 }
 
-.clickable-table .clickable:hover, .clickable-table .green-red-aan-uit:hover, .clickable-table .green-white:hover, .clickable-table .input-hour-min:hover{
+.clickable-table .clickable:hover, .clickable-table .green-red-aan-uit:hover, .clickable-table .green-white:hover, .clickable-table .input-hour-min:hover {
     cursor: pointer;
 }
 
@@ -39,91 +39,93 @@
 
 
 @media screen and (min-width: 1000px) {
-  .table-container {
-    float: left;
-    width: 15%;
-  }
-  .table-container:first-of-type {
-    width: 40%;
-  }
+    .table-container {
+        float: left;
+        width: 15%;
+    }
+
+    .table-container:first-of-type {
+        width: 40%;
+    }
 }
 
 .table_container {
-  float: left;
-  width: 25%;
+    float: left;
+    width: 25%;
 }
 
 .container::after {
-  content: "";
-  clear: both;
-  display: table;
+    content: "";
+    clear: both;
+    display: table;
 }
 
 table {
-  margin: 0 auto;
-  border-radius: 5px;
+    margin: 0 auto;
+    border-radius: 5px;
 }
 
 tr {
-  padding: 15px;
-  text-align: center;
+    padding: 15px;
+    text-align: center;
 }
 
 td {
-  color: black;
-  text-align: center;
-  vertical-align: middle;
-  border: 1px double white;
-  height: 50px;
-  background-color: #d5d0d0;
-  width: 272px;
+    color: black;
+    text-align: center;
+    vertical-align: middle;
+    border: 1px double white;
+    height: 50px;
+    background-color: #d5d0d0;
+    /*width: 272px;*/
     font-size: x-large;
     font-weight: bolder;
 }
 
 .sub_text {
-  font-size: 12px;
-  font-style: italic;
-  color: #0071ce;
-  font-weight: 100;
+    font-size: 12px;
+    font-style: italic;
+    color: #0071ce;
+    font-weight: 100;
 }
 
 th {
-  background-color: black;
-  text-align: center;
-  padding: 10px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  color: white;
-  font-weight: bold;
-  height: 70px;
+    background-color: black;
+    text-align: center;
+    padding: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: white;
+    font-weight: bold;
+    height: 70px;
 }
 
 .header {
-  color: #0071ce;
-  font-weight: bold;
-  padding: 10px;
+    color: #0071ce;
+    font-weight: bold;
+    padding: 10px;
 }
 
 .wrapper {
-  text-align: center;
-  margin-top: 20px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 table tr:last-child td:first-child {
-  border-bottom-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 table tr:last-child td:last-child {
-  border-bottom-right-radius: 10px
-  }
+    border-bottom-right-radius: 10px
+}
 
 @media screen and (max-width: 600px) {
-  .tables {
-    display: flex;
-    flex-direction: column;
-  }
-  .table_container {
-    width: 100%;
-  }
+    .tables {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .table_container {
+        width: 100%;
+    }
 }
